bug fixes, esp for reset button